--- a/sider/selvevaluering.html
+++ b/sider/selvevaluering.html
@@ -14,7 +14,7 @@
     <header>
         <section id="header">
             <a href="../index.html">
-                <img id="logo" src="../img/studylab-logo-grey.png"  alt="Study lab logo i mørke grå">
+                <img id="logo" src="../img/studylab-logo-grey.webp"  alt="Study lab logo i mørke grå">
             </a>
             <div id="navn">
                 <a href="../index.html"><h1>STUDY LAB</h1></a>
@@ -65,7 +65,7 @@
                 håndtere din tid bedre eller opnå mere balance, kan denne test hjælpe dig med at identificere, hvor du står og hvad du kan gøre for at komme endnu længere!
             </p>
             <div class="teaser">
-                <a href="re-direct.html"><img src="../img/test.jpg" alt="Billede af en pen på en test papir"></a>
+                <a href="re-direct.html"><img src="../img/test.webp" alt="Billede af en pen på en test papir"></a>
             </div>
         </section>
 
@@ -76,7 +76,7 @@
                 kan indsigt i dine studievaner hjælpe dig med at studere smartere, ikke hårdere. Tag kontrol over din læringsrejse ved at identificere dine styrker og svagheder, og find ud af, hvordan du kan tilpasse din tilgang for at nå dine mål!
             </p>
             <div class="teaser">
-                <a href="../artikler/identificere-forbedringsomraader.html"><img src="../img/study-organisere.jpg" alt="Billede af en studerende der planlægger sin tid ved hjælp af en kalender"></a>
+                <a href="../artikler/identificere-forbedringsomraader.html"><img src="../img/study-organisere.webp" alt="Billede af en studerende der planlægger sin tid ved hjælp af en kalender"></a>
             </div>
         </section>
      </aside>
@@ -84,7 +84,7 @@
 <div id="fixed"><a href="#top">Til Toppen</a></div>
 
     <footer>
-        <img src="../img/studylab-logo.png" alt="Study lab logo i sort">
+        <img src="../img/studylab-logo.webp" alt="Study lab logo i sort">
         <nav id="footer">
             <ul>
                 <li><a href="re-direct.html">Masthead</a></li>
