--- a/sider/sundhed-og-velfaerd.html
+++ b/sider/sundhed-og-velfaerd.html
@@ -14,7 +14,7 @@
     <header>
         <section id="header">
             <a href="../index.html">
-                <img id="logo" src="../img/studylab-logo-grey.png"  alt="Study lab logo i mørke grå">
+                <img id="logo" src="../img/studylab-logo-grey.webp"  alt="Study lab logo i mørke grå">
             </a>
             <div id="navn">
                 <a href="../index.html"><h1>STUDY LAB</h1></a>
@@ -63,7 +63,7 @@
                 kan disse tips hjælpe dig med at få mere ud af din tid. Læs videre og opdag, hvordan du kan skabe et overblik, der gør hverdagen lettere!
             </p>
             <div class="teaser">
-                <a href="re-direct.html"><img src="../img/sundkost.jpg" alt="Billede forskelige mad ingredienser, kartoffle, hvidlød bl.a."></a>
+                <a href="re-direct.html"><img src="../img/sundkost.webp" alt="Billede forskelige mad ingredienser, kartoffle, hvidlød bl.a."></a>
             </div>
         </section>
 
@@ -74,7 +74,7 @@
                 skærpe dit fokus og hjælpe dig med at håndtere stress? Glem de sene nattetimer foran bøgerne! Find ud af, hvorfor en god nats søvn er lige så vigtig som din læsetid, og hvordan det kan optimere dine resultater!
             </p>
             <div class="teaser">
-                <a href="../artikler/soevn-og-restitution.html"><img src="../img/sleep.jpg" alt="Billede af en person i sengen, med dynen over sig"></a>
+                <a href="../artikler/soevn-og-restitution.html"><img src="../img/sleep.webp" alt="Billede af en person i sengen, med dynen over sig"></a>
             </div>
         </section>
 
@@ -85,7 +85,7 @@
                 Uanset om det er en hurtig gåtur eller en intens træning, kan motion gøre underværker for din studietid. Læs videre og opdag, hvorfor motion er din bedste ven i kampen for at nå dine akademiske mål!
             </p>
             <div class="teaser">
-                <a href="re-direct.html"><img src="../img/motion.jpg" alt="Billede af et par der går en tur sammen"></a>
+                <a href="re-direct.html"><img src="../img/motion.webp" alt="Billede af et par der går en tur sammen"></a>
             </div>
         </section>
 
@@ -96,7 +96,7 @@
                 Læs videre og opdag 10 simple, men effektive tips til at håndtere stress, så du kan balancere studier, fritid og mental sundhed uden at miste overblikket!
             </p>
             <div class="teaser">
-                <a href="re-direct.html"><img src="../img/undvaer.jpg" alt="Billede af en stopskilt"></a>
+                <a href="re-direct.html"><img src="../img/undvaer.webp" alt="Billede af en stopskilt"></a>
             </div>
         </section>
 
@@ -105,7 +105,7 @@
 <div id="fixed"><a href="#top">Til Toppen</a></div>
 
     <footer>
-        <img src="../img/studylab-logo.png" alt="Study lab logo i sort">
+        <img src="../img/studylab-logo.webp" alt="Study lab logo i sort">
         <nav id="footer">
             <ul>
                 <li><a href="re-direct.html">Masthead</a></li>
