--- a/artikler/identificere-forbedringsomraader.html
+++ b/artikler/identificere-forbedringsomraader.html
@@ -14,7 +14,7 @@
     <header>
         <section id="header">
             <a href="../index.html">
-                <img id="logo" src="../img/studylab-logo-grey.png"  alt="Study lab logo i mørke grå">
+                <img id="logo" src="../img/studylab-logo-grey.webp"  alt="Study lab logo i mørke grå">
             </a>
             <div id="navn">
                 <a href="../index.html"><h1>STUDY LAB</h1></a>
@@ -166,7 +166,7 @@
             </label>
 
         </section>
-        <img src="../img/study-organisere.jpg" alt="Billede af en studerende der planlægger sin tid ved hjælp af en kalender">
+        <img src="../img/study-organisere.webp" alt="Billede af en studerende der planlægger sin tid ved hjælp af en kalender">
     </article>
     
     <article class="layout-1">
@@ -178,13 +178,13 @@
             </p>
         </section>
 
-        <img src="../img/group-study.jpg" alt="Billede viser en gruppe af studerende der studere sammen">
+        <img src="../img/group-study.webp" alt="Billede viser en gruppe af studerende der studere sammen">
     </article>
 
     <div id="fixed"><a href="#top">Til Toppen</a></div>
 
     <footer>
-        <img src="../img/studylab-logo.png" alt="Study lab logo i sort">
+        <img src="../img/studylab-logo.webp" alt="Study lab logo i sort">
         <nav id="footer">
             <ul>
                 <li><a href="../sider/re-direct.html">Masthead</a></li>
