--- a/artikler/soevn-og-restitution.html
+++ b/artikler/soevn-og-restitution.html
@@ -14,7 +14,7 @@
     <header>
         <section id="header">
             <a href="../index.html">
-                <img id="logo" src="../img/studylab-logo-grey.png"  alt="Study lab logo i mørke grå">
+                <img id="logo" src="../img/studylab-logo-grey.webp"  alt="Study lab logo i mørke grå">
             </a>
             <div id="navn">
                 <a href="../index.html"><h1>STUDY LAB</h1></a>
@@ -76,7 +76,7 @@
                     “Eksperter konkluderer, at en 90 minutters lur efter undervisning er tilstrækkelig til at fremme hukommelses reorganisering, hvor hjernen integrerer ny viden med tidligere læring.”
                 </p>
         </section>
-        <img src="../img/sleep.jpg" alt="Billede af en person i sengen, med dynen over sig">
+        <img src="../img/sleep.webp" alt="Billede af en person i sengen, med dynen over sig">
     </article>
 
     <article class="layout-1">
@@ -109,13 +109,13 @@
                     </li>
                 </ol>
         </section>
-        <img src="../img/girl.JPG" alt="Billede viser en pige der gemmer sig under dynen">
+        <img src="../img/girl.webp" alt="Billede viser en pige der gemmer sig under dynen">
     </article>
 
     <div id="fixed"><a href="#top">Til Toppen</a></div>
 
     <footer>
-        <img src="../img/studylab-logo.png" alt="Study lab logo i sort">
+        <img src="../img/studylab-logo.webp" alt="Study lab logo i sort">
         <nav id="footer">
             <ul>
                 <li><a href="../sider/re-direct.html">Masthead</a></li>
