--- a/artikler/struktur.html
+++ b/artikler/struktur.html
@@ -14,7 +14,7 @@
     <header>
         <section id="header">
             <a href="../index.html">
-                <img id="logo" src="../img/studylab-logo-grey.png"  alt="Study lab logo i mørke grå">
+                <img id="logo" src="../img/studylab-logo-grey.webp"  alt="Study lab logo i mørke grå">
             </a>
             <div id="navn">
                 <a href="../index.html"><h1>STUDY LAB</h1></a>
@@ -69,7 +69,7 @@
 
                 <p>Det kan nogle gange være nødvendigt at fravælge mindre vigtige aftaler for at investere mere energi i forskellige studiemæssige aktiviteter.</p>
         </section>
-            <img src="../img/study-space-1.JPG" alt="Billede af studiemiljø på skolen">
+            <img src="../img/study-space-1.webp" alt="Billede af studiemiljø på skolen">
     </article>
 
     <article class="layout-2">
@@ -98,7 +98,7 @@
                     Her er det op til dig om du ville planlægge en langsigte men en semestreplan eller kortsigte med en ugeplan. Prøv dig frem til hvad der fungerer bedst for dig!
                 </p>
         </section>
-        <img src="../img/prioritering.png" alt="Et model af prioriteringsmetode">
+        <img src="../img/prioritering.webp" alt="Et model af prioriteringsmetode">
     </article>
 
     <article class="layout-1">
@@ -143,7 +143,7 @@
                 </li>
             </ol>            
         </section>
-        <img src="../img/time.jpg" alt="Billede af et simpelt værelse med et ur">
+        <img src="../img/time.webp" alt="Billede af et simpelt værelse med et ur">
     </article>
 
     <article class="layout-2">
@@ -164,13 +164,13 @@
                 sikkre dig et produktive sektion til studiearbejdet.
             </p>
         </section>
-        <img src="../img/pomodoro-teknik.jpeg" alt="En grafisk beskrivelse af hvad pomodoro teknik går ud på">
+        <img src="../img/pomodoro-teknik.webp" alt="En grafisk beskrivelse af hvad pomodoro teknik går ud på">
     </article>
 
     <div id="fixed"><a href="#top">Til Toppen</a></div>
 
     <footer>
-        <img src="../img/studylab-logo.png" alt="Study lab logo i sort">
+        <img src="../img/studylab-logo.webp" alt="Study lab logo i sort">
         <nav id="footer">
             <ul>
                 <li><a href="../sider/re-direct.html">Masthead</a></li>
