--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <section id="header">
             <a href="index.html">
-                <img id="logo" src="./img/studylab-logo-grey.png"  alt="Study lab logo i mørke grå">
+                <img id="logo" src="./img/studylab-logo-grey.webp"  alt="Study lab logo i mørke grå">
             </a>
             <div>
                 <a href="index.html"><h1>STUDY LAB</h1></a>
@@ -77,10 +77,10 @@
                 Hos Study Lab mener vi at motivation kan oftest har noget med hvordan du organisere din tid. Med en mere <a href="./artikler/struktur.html">struktureret tidsplanlægning</a> ville du også give dig selv et større overblik over hvor meget tid du har til hvilke opgaver i din hverdag. 
             </p>
         </section>
-            <img src="./img/study-mot.jpg" alt="Billede af en studerende der er meget umotiverende">
+            <img src="./img/study-mot.webp" alt="Billede af en studerende der er meget umotiverende">
     </article>
 
-    <div id="plant"><img src="./img/plants.png" alt="Billede af en plante uden baggrund"></div>
+    <div id="plant"><img src="./img/plants.webp" alt="Billede af en plante uden baggrund"></div>
     
         <aside>
             <section class="content">
@@ -90,7 +90,7 @@
                     kan disse tips hjælpe dig med at få mere ud af din tid. Læs videre og opdag, hvordan du kan skabe et overblik, der gør hverdagen lettere!
                 </p>
                 <div class="teaser">
-                    <a href="./artikler/struktur.html"><img src="./img/study-space-1.jpg" alt="Billede af studiemiljø på skolen"></a>
+                    <a href="./artikler/struktur.html"><img src="./img/study-space-1.webp" alt="Billede af studiemiljø på skolen"></a>
                 </div>
             </section>
 
@@ -101,7 +101,7 @@
                     skærpe dit fokus og hjælpe dig med at håndtere stress? Glem de sene nattetimer foran bøgerne! Find ud af, hvorfor en god nats søvn er lige så vigtig som din læsetid, og hvordan det kan optimere dine resultater!
                 </p>
                 <div class="teaser">
-                    <a href="./artikler/soevn-og-restitution.html"><img src="./img/sleep.jpg" alt="Billede af en person i sengen, med dynen over sig"></a>
+                    <a href="./artikler/soevn-og-restitution.html"><img src="./img/sleep.webp" alt="Billede af en person i sengen, med dynen over sig"></a>
                 </div>
             </section>
 
@@ -112,13 +112,13 @@
                     kan indsigt i dine studievaner hjælpe dig med at studere smartere, ikke hårdere. Tag kontrol over din læringsrejse ved at identificere dine styrker og svagheder, og find ud af, hvordan du kan tilpasse din tilgang for at nå dine mål!
                 </p>
                 <div class="teaser">
-                    <a href="./artikler/identificere-forbedringsomraader.html"><img src="./img/study-organisere.jpg" alt="Billede af en studerende der planlægger sin tid ved hjælp af en kalender"></a>
+                    <a href="./artikler/identificere-forbedringsomraader.html"><img src="./img/study-organisere.webp" alt="Billede af en studerende der planlægger sin tid ved hjælp af en kalender"></a>
                 </div>
             </section>
          </aside>
     <div id="fixed"><a href="#top">Til Toppen</a></div>
     <footer>
-        <img src="./img/studylab-logo.png" alt="Study lab logo i sort">
+        <img src="./img/studylab-logo.webp" alt="Study lab logo i sort">
         <nav id="footer">
             <ul>
                 <li><a href="./sider/re-direct.html">Masthead</a></li>
