--- a/sider/det-gode-studievaner.html
+++ b/sider/det-gode-studievaner.html
@@ -14,7 +14,7 @@
     <header>
         <section id="header">
             <a href="../index.html">
-                <img id="logo" src="../img/studylab-logo-grey.png"  alt="Study lab logo i mørke grå">
+                <img id="logo" src="../img/studylab-logo-grey.webp"  alt="Study lab logo i mørke grå">
             </a>
             <div id="navn">
                 <a href="../index.html"><h1>STUDY LAB</h1></a>
@@ -63,7 +63,7 @@
                 kan disse tips hjælpe dig med at få mere ud af din tid. Læs videre og opdag, hvordan du kan skabe et overblik, der gør hverdagen lettere!
             </p>
             <div class="teaser">
-                <a href="../artikler/struktur.html"><img src="../img/study-space-1.jpg" alt="Billede af studiemiljø på skolen"></a>
+                <a href="../artikler/struktur.html"><img src="../img/study-space-1.webp" alt="Billede af studiemiljø på skolen"></a>
             </div>
         </section>
 
@@ -74,7 +74,7 @@
                 at have en klar struktur kan hjælpe dig med at lære hurtigere og mere effektivt. Læs videre for at opdage simple måder at optimere din studieteknik og få mere ud af din indsats!
             </p>
             <div class="teaser">
-                <a href="re-direct.html"><img src="../img/studieteknik.jpg" alt="Billede af en person der notere fra sin bog"></a>
+                <a href="re-direct.html"><img src="../img/studieteknik.webp" alt="Billede af en person der notere fra sin bog"></a>
             </div>
         </section>
 
@@ -85,7 +85,7 @@
                 Dit studiemiljø spiller en større rolle i din succes, end du måske er klar over. Opdag 10 overraskende ting, der kan gøre dit studiemiljø mere effektivt og hjælpe dig med at få det meste ud af din tid!
             </p>
             <div class="teaser">
-                <a href="re-direct.html"><img src="../img/studiemiljoe.jpg" alt="Billede af en studerende der laver sin lektier på sengen i egen hjem"></a>
+                <a href="re-direct.html"><img src="../img/studiemiljoe.webp" alt="Billede af en studerende der laver sin lektier på sengen i egen hjem"></a>
             </div>
         </section>
 
@@ -96,7 +96,7 @@
                 Læs videre for at finde ud af, hvad du bør undgå for at få mere ud af dine studier og holde fokus på det, der virkelig tæller!
             </p>
             <div class="teaser">
-                <a href="re-direct.html"><img src="../img/undvaer.jpg" alt="Billede af en stopskilt"></a>
+                <a href="re-direct.html"><img src="../img/undvaer.webp" alt="Billede af en stopskilt"></a>
             </div>
         </section>
 
@@ -105,7 +105,7 @@
 <div id="fixed"><a href="#top">Til Toppen</a></div>
 
     <footer>
-        <img src="../img/studylab-logo.png" alt="Study lab logo i sort">
+        <img src="../img/studylab-logo.webp" alt="Study lab logo i sort">
         <nav id="footer">
             <ul>
                 <li><a href="re-direct.html">Masthead</a></li>
