--- a/sider/diskussion.html
+++ b/sider/diskussion.html
@@ -14,7 +14,7 @@
     <header>
         <section id="header">
             <a href="../index.html">
-                <img id="logo" src="../img/studylab-logo-grey.png"  alt="Study lab logo i mørke grå">
+                <img id="logo" src="../img/studylab-logo-grey.webp"  alt="Study lab logo i mørke grå">
             </a>
             <div id="navn">
                 <a href="../index.html"><h1>STUDY LAB</h1></a>
@@ -55,7 +55,7 @@
     <main class="bg-main">
         <h1>DISKUSSION</h1>
     </main>
-    <div id="plant"><img src="../img/plants.png" alt="Billede af en plante uden baggrund"></div>
+    <div id="plant"><img src="../img/plants.webp" alt="Billede af en plante uden baggrund"></div>
     
     <div class="login-container">
         <a href="log-in.html" class="login-btn">Login</a>
@@ -81,10 +81,10 @@
         </section>
     </aside>
 
-    <div id="plant-2"><img src="../img/plants.png" alt="Billede af en plante uden baggrund"></div>
+    <div id="plant-2"><img src="../img/plants.webp" alt="Billede af en plante uden baggrund"></div>
 
     <footer>
-        <img src="../img/studylab-logo.png" alt="Study lab logo i sort">
+        <img src="../img/studylab-logo.webp" alt="Study lab logo i sort">
         <nav id="footer">
             <ul>
                 <li><a href="re-direct.html">Masthead</a></li>
