--- a/sider/re-direct.html
+++ b/sider/re-direct.html
@@ -15,7 +15,7 @@
     <header>
         <section id="header">
             <a href="../index.html">
-                <img id="logo" src="../img/studylab-logo-grey.png"  alt="Study lab logo i mørke grå">
+                <img id="logo" src="../img/studylab-logo-grey.webp"  alt="Study lab logo i mørke grå">
             </a>
             <div id="navn">
                 <h1>STUDY LAB</h1>
@@ -58,7 +58,7 @@
         </main>
     <div id="fixed"><a href="#top">Til Toppen</a></div>
     <footer>
-        <img src="../img/studylab-logo.png" alt="Study lab logo i sort">
+        <img src="../img/studylab-logo.webp" alt="Study lab logo i sort">
         <nav id="footer">
             <ul>
                 <li><a href="re-direct.html">Masthead</a></li>
